tests/error/struct_errors/type_missing1.err
Error: Unexpected statement (at $FILE:13:4)
   | 
11 | @guppy.struct(module)
12 | class MyStruct:
13 |     x
   |     ^ Unexpected statement in struct definition

Guppy compilation failed due to 1 previous error
